# Temizxali

./: .gitignore  Dockerfile  LOCAL_README.md  README.md  docker-compose.yaml  entrypoint.sh  nginx.conf  pyproject.toml  test.py
old_static_andhtml/: about.html  commet_add.html  contact.html  project.html  service.html  testimonial.html
old_static_andhtml/css/: calculator.css  style.css
old_static_andhtml/js/: main.js
temizxali/: COMPILE_TRANSLATIONS.md  manage.py
temizxali/services/: apps.py  forms.py  signals.py  urls.py  urls_v1.py
temizxali/services/admin/: __init__.py  admin_v1.py
temizxali/services/migrations/: 0001_initial.py  0002_about_experience_years.py  0002_add_missing_bloq_fields.py  0002_alter_about_options_alter_abouttranslation_options_and_more.py  0002_alter_service_price_alter_servicevariant_price.py  0002_image_is_center_background_image.py  0002_image_service_variant.py  0002_motto_mottotranslation.py  0002_remove_saleevent_service_and_more.py  0002_remove_specialproject_is_completed_and_more.py  0002_service_is_number_alter_service_is_kv_metr_and_more.py  0003_add_whatsapp_number_2.py  (+55 more)
temizxali/temizxali/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
temizxali/templates/: about.html  about_page.html  blog.html  blog_detail.html  calculator.html  comment_add.html  contact.html  home_page.html  index.html  order_form.html  order_success.html  pagination_partial.html  project.html  projects.html  projects_partial.html  review_form.html  review_success.html  service.html  service_detail_page.html  testimonial.html
(+41 files in other folders)
